Added new questions and changed title messages, cleaned up warnings.